Updated Cookie List
Changed three cookie types

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h1>Cookies!</h1>
     <p>My Favorite Cookies: </p>
     <ul>
-      <li>Chocolate Chip</li>
-      <li>Peanut Butter</li>
-      <li>Christmas</li>
+      <li>White Chocolate</li>
+      <li>Butter</li>
+      <li>Pasty</li>
     </ul>
   </div>
 </div>
